--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,4 +3,11 @@ project:
   output-dir: docs
   
 website: 
-  title: "Homework_607"
+  title: "BIOL 607 Homework"
+  navbar: 
+    left: 
+      - href: index.qmd
+        text: Home
+      - HW1_Intro_to_R.qmd
+      
+  
