--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,13 +2,25 @@ project:
   type: website
   output-dir: docs
   
+format:
+  html:
+    theme: Lumen
+    css: styles.css
+  
 website: 
   title: "BIOL 607/617 Assignments"
   navbar: 
+    tools:
+      - icon: github
+        href: https://github.com/DantonyL
     left: 
       - href: index.qmd
-        text: Home
-      - HW1_Intro_to_R.qmd
-      - HW2_ggplot.qmd
+        text: "Home"
+      - href: HW1_Intro_to_R.qmd
+        text: "HW1 Intro to R"
+      - href: HW2_ggplot.qmd
+        text: "HW2 gglot"
+      - href: HW3_Tidy_Data.qmd
+        text: "HW3 Tidy Data"
       
   
