--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,5 +22,7 @@ website:
         text: "HW2 ggplot"
       - href: HW3_Tidy_Data.qmd
         text: "HW3 Tidy Data"
+      - href: HW4_Sampling.qmd
+      - text: "HW4 Sampling & Simulation"
       
   
