--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,5 +22,6 @@ website:
       - HW4_Sampling.qmd
       - HW5_Linear_Regression.qmd
       - HW6_Complex_Linear_Model.qmd
+      - Midterm.qmd
       
   
